[package]
name = "d-pool"
version = "0.5.1"
authors = ["jake <jh@discordapp.com>", "MicroondasV2 <microondasv2@cloudflare.com>"]
edition = "2021"
license = "APACHE 2.0"
description = "A dynamically-sized object pool."
repository = "https://github.com/Kenabot/d-pool"
homepage = "https://github.com/Kenabot/d-pool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.3.6"
